--- a/cms/public/index.html
+++ b/cms/public/index.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
-<!--
-* CoreUI Free - Vue.js Admin Template
-* @version v3.0.0-beta.1
-* @link https://coreui.io/vue/
-* Copyright (c) 2019 creativeLabs Łukasz Holeczek
--->
 <html>
 
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>CoreUI - Vue Open Source Bootstrap Admin Template</title>
+  <title>Admin Panel</title>
   <!-- favicons for all devices -->
   <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -30,20 +24,6 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
-  <!-- geotagging -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118965717-3"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-    // Shared ID
-    gtag('config', 'UA-118965717-3');
-    // Vue.js ID
-    gtag('config', 'UA-118965717-7');
-  </script>
 </head>
 
 <body>
